--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
 	<div id="metrics" ng-app="metricsApp" ng-controller="metricsCtrl">
 		<loading></loading>
+		<div class="alert alert-danger" role="alert" hidden="true"></div>
 		<div ng-if="vmMetrics">
 			<div collapse-toggler class="toggler">
 				<a href="#"><i class="glyphicon glyphicon-chevron-down"></i> All
@@ -97,7 +98,6 @@
 				</table>
 			</div>
 		</div>
-		<div class="alert alert-danger" role="alert" hidden="true"></div>
 
 		<div ng-if="orgs">
 			<div collapse-toggler class="toggler">
@@ -118,7 +118,7 @@
 				</table>
 			</div>
 		</div>
-		
+
 		<div ng-if="spaces">
 			<div collapse-toggler class="toggler">
 				<a href="#"><i class="glyphicon glyphicon-chevron-down"></i> All
@@ -128,7 +128,7 @@
 				<table class="table table-striped table-bordered" cellspacing="0"
 					width="100%">
 					<tr>
-						
+
 						<td>Org Name</td>
 						<td>Space Name</td>
 						<td>Space GUID</td>
@@ -147,7 +147,7 @@
 				</table>
 			</div>
 		</div>
-		
+
 		<div ng-if="apps">
 			<div collapse-toggler class="toggler">
 				<a href="#"><i class="glyphicon glyphicon-chevron-down"></i> All
@@ -181,9 +181,31 @@
 				</table>
 			</div>
 		</div>
-		
-		<div ng-if="total_ai_count">
-			<p>Total AI Count : <span class="badge">{{total_ai_count}}</span></p>
+
+		<div ng-if="totals.applicationsCount">
+			<table>
+				<tr>Totals Per foundation:
+					<td><span class="badge">Total Orgs:
+							{{totals.orgsCount}}</span></td>
+					<td><span class="badge">Total Spaces :
+							{{totals.spacesCount}}</span></td>
+					<td><span class="badge">Total Apps Count :
+							{{totals.applicationsCount}}</span></td>
+					<td><span class="badge">Total CF Users :
+							{{totals.usersCount}}</span></td>
+					<td><span class="badge">Total Routes :
+							{{totals.routesCount}}</span></td>
+					<td><span class="badge">Total Buildpacks :
+							{{totals.buildpacksCount}}</span></td>
+					<td><span class="badge">Total Services :
+							{{totals.servicesCount}}</span></td>
+					<td><span class="badge">Total Service Brokers :
+							{{totals.serviceBrokersCount}}</span></td>
+					<td><span class="badge">Total Service Instances :
+							{{totals.serviceInstancesCount}}</span></td>
+					<td><span class="badge">Total AI Count : {{total_ai_count}}</span></td>
+				</tr>
+			</table>
 		</div>
 	</div>
 </body>
