--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <meta charset="utf-8">
 <title>Ops Metrics Data</title>
 <link rel="stylesheet" href="./css/bootstrap.min.css">
-<link rel="stylesheet" href="./css/dataTables.bootstrap.min.css">
+<link rel="stylesheet" href="./css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="./css/angular-chart.min.css">
 
 <script type="text/javascript" src="./js/angular.min.js"></script>
 <script type="text/javascript" src="./js/jquery-1.12.0.min.js"></script>
 <script type="text/javascript" src="./js/bootstrap.min.js"></script>
 <script type="text/javascript" src="./js/underscore-min.js"></script>
-
-<script type="text/javascript" src="./js/jquery.dataTables.min.js"></script>
-<script type="text/javascript" src="./js/dataTables.bootstrap.min.js"></script>
+<script type="text/javascript" src="./js/chart.js"></script>
+<script type="text/javascript" src="./js/angular-chart.min.js"></script>
 
 <script type="text/javascript" src="./js/metrics.js"></script>
 </head>
@@ -19,58 +19,141 @@
 	<div id="metrics" ng-app="metricsApp" ng-controller="metricsCtrl">
 		<loading></loading>
 		<div class="alert alert-danger" role="alert" hidden="true"></div>
+		<div ng-if="total.applicationsCount" style="font-size: 24px">
+			<p>Totals Per foundation:</p>
+			<span class="label label-success label-as-badge">Total
+				Orgs:{{total.orgsCount}}</span> <span
+				class="label label-success label-as-badge">Total Spaces :
+				{{total.spacesCount}}</span> <span
+				class="label label-success label-as-badge">Total Apps Count :
+				{{total.applicationsCount}}</span> <span
+				class="label label-success label-as-badge">Total CF Users :
+				{{total.usersCount}}</span> <span
+				class="label label-success label-as-badge">Total Routes :
+				{{total.routesCount}}</span> <span
+				class="label label-success label-as-badge">Total Buildpacks :
+				{{total.buildpacksCount}}</span> <span
+				class="label label-success label-as-badge">Total Services :
+				{{total.servicesCount}}</span> <span
+				class="label label-success label-as-badge">Total Service
+				Brokers : {{total.serviceBrokersCount}}</span> <span
+				class="label label-success label-as-badge">Total Service
+				Instances : {{total.serviceInstancesCount}}</span> <span
+				class="label label-success label-as-badge">Total AI Count :
+				{{total_ai_count}}</span> <span class="label label-success label-as-badge">Total
+				App Create Events Count : {{total.appCreateEventsCount}}</span> <span
+				class="label label-success label-as-badge">Total App Delete
+				Events Count : {{total.appDeleteEventsCount}}</span> <span
+				class="label label-success label-as-badge">Total App Update
+				Events Count : {{total.appUpdateEventsCount}}</span> <span
+				class="label label-success label-as-badge">Total App Crash
+				Events Count : {{total.appCrashEventsCount}}</span> <span
+				class="label label-success label-as-badge">Total App Start
+				Events Count : {{total.appStartEventsCount}}</span> <span
+				class="label label-success label-as-badge">Total App Stop
+				Events Count : {{total.appStopEventsCount}}</span> <span
+				class="label label-success label-as-badge">Total App SSH
+				Authorized Events Count : {{total.appAuthorizedSSHEventsCount}}</span> <span
+				class="label label-success label-as-badge">Total App SSH
+				UnAuthorized Events Count : {{total.appUnAuthorizedSSHEventsCount}}</span>
+		</div>
+
+		<div ng-repeat="deploymentChart in deploymentChartMap">
+			<div ng-show="deploymentChart.chartMeta.healthydata.length">
+				<div class="col-lg-6 col-md-10 ng-scope">
+					<div class="panel panel-success">
+						<div class="panel-heading">{{deploymentChart.deploymentname}}
+							- Total Running Jobs -
+							{{deploymentChart.chartMeta.healthylabels.length}} - (Running
+							Jobs - CPU Per User %)</div>
+						<div class="panel-body">
+							<div class="chart-container">
+								<canvas id="{{deploymentChart.deploymentname}} - Healthy"
+									class="chart chart-doughnut"
+									chart-data="deploymentChart.chartMeta.healthydata"
+									chart-labels="deploymentChart.chartMeta.healthylabels"></canvas>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div ng-show="deploymentChart.chartMeta.unhealthydata.length">
+				<div class="col-lg-6 col-md-10 ng-scope">
+					<div class="panel panel-danger">
+						<div class="panel-heading">
+							{{deploymentChart.deploymentname}} - Total Failed Jobs -
+							{{deploymentChart.chartMeta.unhealthylabels.length}} - (Failed
+							Jobs - System CPU %)</div>
+						<div class="panel-body">
+							<div class="chart-container">
+								<canvas id="{{deploymentChart.deploymentname}} - UnHealthy"
+									class="chart chart-pie"
+									chart-data="deploymentChart.chartMeta.unhealthydata"
+									chart-labels="deploymentChart.chartMeta.unhealthylabels"></canvas>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
 		<div ng-if="vmMetrics">
 			<div collapse-toggler class="toggler">
 				<a href="#"><i class="glyphicon glyphicon-chevron-down"></i> All
 					VM Metrics</a>
 			</div>
-			<div class="collapse">
-				<table id="vmMetricsTable"
-					class="table table-striped table-bordered" cellspacing="0"
-					width="100%">
-					<tr>
-						<td>Deployment Name</td>
-						<td>Job Name</td>
-						<td>Job IP</td>
-						<td>Job Index</td>
-						<td>system.healthy</td>
-						<td>system.load.1m</td>
-						<td>system.swap.percent</td>
-						<td>system.swap.kb</td>
-						<td>system.cpu.user</td>
-						<td>system.disk.ephemeral.inode.percent</td>
-						<td>system.disk.ephemeral.percent</td>
-						<td>system.disk.system.percent</td>
-						<td>system.cpu.sys</td>
-						<td>system.disk.persistent.percent</td>
-						<td>system.mem.kb</td>
-						<td>system.cpu.wait</td>
-						<td>system.mem.percent</td>
-						<td>system.disk.system.inode.percent</td>
-						<td>system.disk.persistent.inode.percent</td>
-					</tr>
-					<tr
-						ng-repeat="vmMetric in vmMetrics | orderBy:'jobDetail.deployment'">
-						<td>{{vmMetric.jobDetail.deployment}}</td>
-						<td>{{vmMetric.jobDetail.job}}</td>
-						<td>{{vmMetric.jobDetail.ip}}</td>
-						<td>{{vmMetric.jobDetail.index}}</td>
-						<td>{{vmMetric.fixedAttribute.system_healthy}}</td>
-						<td>{{vmMetric.fixedAttribute.system_load_1m}}</td>
-						<td>{{vmMetric.fixedAttribute.system_swap_percent}}</td>
-						<td>{{vmMetric.fixedAttribute.system_swap_kb}}</td>
-						<td>{{vmMetric.fixedAttribute.system_cpu_user}}</td>
-						<td>{{vmMetric.fixedAttribute.system_disk_ephemeral_inode_percent}}</td>
-						<td>{{vmMetric.fixedAttribute.system_disk_ephemeral_percent}}</td>
-						<td>{{vmMetric.fixedAttribute.system_disk_system_percent}}</td>
-						<td>{{vmMetric.fixedAttribute.system_cpu_sys}}</td>
-						<td>{{vmMetric.fixedAttribute.system_disk_persistent_percent}}</td>
-						<td>{{vmMetric.fixedAttribute.system_mem_kb}}</td>
-						<td>{{vmMetric.fixedAttribute.system_cpu_wait}}</td>
-						<td>{{vmMetric.fixedAttribute.system_mem_percent}}</td>
-						<td>{{vmMetric.fixedAttribute.system_disk_system_inode_percent}}</td>
-						<td>{{vmMetric.fixedAttribute.system_disk_persistent_inode_percent}}</td>
-					</tr>
+			<div class="table-responsive collapse">
+				<table id="vmMetricsTable" class="table">
+					<thead>
+						<tr>
+							<td>Deployment Name</td>
+							<td>Job Name</td>
+							<td>Job IP</td>
+							<td>Job Index</td>
+							<td>system.healthy</td>
+							<td>system.load.1m</td>
+							<td>system.swap.percent</td>
+							<td>system.swap.kb</td>
+							<td>system.cpu.user</td>
+							<td>system.disk.ephemeral.inode.percent</td>
+							<td>system.disk.ephemeral.percent</td>
+							<td>system.disk.system.percent</td>
+							<td>system.cpu.sys</td>
+							<td>system.disk.persistent.percent</td>
+							<td>system.mem.kb</td>
+							<td>system.cpu.wait</td>
+							<td>system.mem.percent</td>
+							<td>system.disk.system.inode.percent</td>
+							<td>system.disk.persistent.inode.percent</td>
+						</tr>
+					</thead>
+					<tbody>
+						<tr
+							ng-repeat="vmMetric in vmMetrics | orderBy:'jobDetail.deployment'">
+							<td>{{vmMetric.jobDetail.deployment}}</td>
+							<td>{{vmMetric.jobDetail.job}}</td>
+							<td>{{vmMetric.jobDetail.ip}}</td>
+							<td>{{vmMetric.jobDetail.index}}</td>
+							<td class="success"
+								ng-if="vmMetric.fixedAttribute.system_healthy == '1.0'">Healthy</td>
+							<td class="danger"
+								ng-if="vmMetric.fixedAttribute.system_healthy != '1.0'">Unhealthy</td>
+							<td>{{vmMetric.fixedAttribute.system_load_1m}}</td>
+							<td>{{vmMetric.fixedAttribute.system_swap_percent}}</td>
+							<td>{{vmMetric.fixedAttribute.system_swap_kb}}</td>
+							<td>{{vmMetric.fixedAttribute.system_cpu_user}}</td>
+							<td>{{vmMetric.fixedAttribute.system_disk_ephemeral_inode_percent}}</td>
+							<td>{{vmMetric.fixedAttribute.system_disk_ephemeral_percent}}</td>
+							<td>{{vmMetric.fixedAttribute.system_disk_system_percent}}</td>
+							<td>{{vmMetric.fixedAttribute.system_cpu_sys}}</td>
+							<td>{{vmMetric.fixedAttribute.system_disk_persistent_percent}}</td>
+							<td>{{vmMetric.fixedAttribute.system_mem_kb}}</td>
+							<td>{{vmMetric.fixedAttribute.system_cpu_wait}}</td>
+							<td>{{vmMetric.fixedAttribute.system_mem_percent}}</td>
+							<td>{{vmMetric.fixedAttribute.system_disk_system_inode_percent}}</td>
+							<td>{{vmMetric.fixedAttribute.system_disk_persistent_inode_percent}}</td>
+						</tr>
+					</tbody>
 				</table>
 			</div>
 		</div>
@@ -182,31 +265,6 @@
 			</div>
 		</div>
 
-		<div ng-if="totals.applicationsCount">
-			<table>
-				<tr>Totals Per foundation:
-					<td><span class="badge">Total Orgs:
-							{{totals.orgsCount}}</span></td>
-					<td><span class="badge">Total Spaces :
-							{{totals.spacesCount}}</span></td>
-					<td><span class="badge">Total Apps Count :
-							{{totals.applicationsCount}}</span></td>
-					<td><span class="badge">Total CF Users :
-							{{totals.usersCount}}</span></td>
-					<td><span class="badge">Total Routes :
-							{{totals.routesCount}}</span></td>
-					<td><span class="badge">Total Buildpacks :
-							{{totals.buildpacksCount}}</span></td>
-					<td><span class="badge">Total Services :
-							{{totals.servicesCount}}</span></td>
-					<td><span class="badge">Total Service Brokers :
-							{{totals.serviceBrokersCount}}</span></td>
-					<td><span class="badge">Total Service Instances :
-							{{totals.serviceInstancesCount}}</span></td>
-					<td><span class="badge">Total AI Count : {{total_ai_count}}</span></td>
-				</tr>
-			</table>
-		</div>
 	</div>
 </body>
 </html>
