--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<div id="metrics" ng-app="metricsApp" ng-controller="metricsCtrl">
 		<loading></loading>
 		<div class="alert alert-danger" role="alert" hidden="true"></div>
-		<h1>Per foundation Data:</h1>
+		<h1>Per PCF Deployment:</h1>
 
 
 		<div>
